# Ops-Agent

./: .env.example  .gitignore  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  project_log.md
.github/workflows/: ci.yml  deploy.yml
agent/: .dockerignore  Dockerfile  pyproject.toml
agent/app/: __init__.py  api_client.py  config.py  graph.py  main.py  nodes.py  prompts.py  routing.py  schemas.py  state.py  tools.py
agent/tests/: conftest.py  test_api_client.py  test_chat.py  test_graph.py  test_main.py  test_routing.py  test_schemas.py  test_tools.py
agent/tests/evals/: __init__.py  rubric.py  test_live_model.py  test_model_plan_mocked.py
api/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py
api/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  seed.py  services.py
api/app/routers/: __init__.py  assets.py  checkouts.py  db.py  health.py  users.py
api/tests/: conftest.py  test_assets.py  test_checkouts.py  test_constraints.py  test_health.py  test_seed.py  test_users.py
docs/implementation/: 00-roadmap-and-contracts.md  01-domain-api.md  02-langgraph-agent.md  03-react-frontend.md  04-compose-and-configuration.md  05-testing-ci-and-observability.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  main.tsx  styles.css  thread.test.ts  thread.ts  vite-env.d.ts
frontend/src/components/: ChatComposer.test.tsx  ChatComposer.tsx  MessageList.tsx
frontend/src/test/: setup.ts
scripts/: e2e.sh  reset-local-db.sh  smoke-test.sh  smoke.py
tests/e2e/: chat.spec.ts  domain_fingerprint.sql  test_live_stack.py
