[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ops-agent"
version = "0.1.0"
description = "Persistent read-only LangGraph assistant for IT asset operations"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "langchain-anthropic>=1.0,<2",
  "langgraph>=1.0.8,<2",
  "langgraph-checkpoint-postgres>=3.0,<4",
  "psycopg[binary,pool]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"
markers = ["live: calls a running stack and may spend provider credits"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
