[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ops-agent-domain-api"
version = "0.1.0"
description = "Synchronous domain API for the Ops Agent asset inventory"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.116,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "sqlalchemy>=2.0.41,<3",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[project.scripts]
seed-domain = "app.seed:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP042", "UP046", "UP047"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]
